<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainscreenlayout"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tvtitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/bogle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:background="@drawable/buttons"
        android:drawableLeft="@drawable/meal"
        android:drawableRight="@drawable/meal"
        android:text="@string/boglelist" />

    <Button
        android:id="@+id/baksam"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons"
        android:drawableLeft="@drawable/meal2"
        android:drawableRight="@drawable/meal2"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/baksamlist" />

    <Button
        android:id="@+id/bgun"
        android:layout_width="fill_parent"
        android:background="@drawable/buttons"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:drawableLeft="@drawable/dish"
        android:drawableRight="@drawable/dish"
        android:text="@string/bbugun" />

    <ImageView
        android:contentDescription="@string/afiyet"
        android:id="@+id/imageView1"
        android:layout_width="118dp"
        android:layout_gravity="center"
        android:layout_weight="0.14"
        android:src="@drawable/logo"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:maxHeight="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:background="@android:color/holo_blue_dark" />

</LinearLayout>